--- a/ParkyWeb/Views/Home/Login.cshtml
+++ b/ParkyWeb/Views/Home/Login.cshtml
@@ -3,10 +3,56 @@
     ViewData["Title"] = "Login";
 }
 
-<h1>Login</h1>
-
+@*
 <form method="post">
     <input type="text" placeholder="Username" asp-for="Username" />
     <input type="password" placeholder="Username" asp-for="Password" />
     <button type="submit" value="Submit" class="btn btn-primary">Login</button>
-</form>
+</form>*@
+
+		<div class="container-login100">
+			<div class="wrap-login100 my-0">
+				<div class="login100-pic js-tilt" data-tilt>
+					<img src="~/images/img-01.png" alt="IMG">
+				</div>
+
+				<form class="login100-form validate-form" method="post">
+					<span class="login100-form-title">
+						Member Login
+					</span>
+
+					<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+						<input class="input100" type="text" placeholder="Username" asp-for="Username">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-envelope" aria-hidden="true"></i>
+						</span>
+					</div>
+
+					<div class="wrap-input100 validate-input" data-validate = "Password is required">
+						<input class="input100" type="password" placeholder="Password" asp-for="Password" />
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-lock" aria-hidden="true"></i>
+						</span>
+					</div>
+					
+					<div class="container-login100-form-btn">
+						<button class="login100-form-btn" type="submit" value="Submit">
+							Login
+						</button>
+					</div>
+
+					<div class="text-center p-t-20">
+						<a class="txt2" asp-action="Register" asp-controller="Home">
+							Create your Account
+							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+						</a>
+					</div>
+					<div class="text-center p-t-80">
+						
+					</div>
+					
+				</form>
+			</div>
+		</div>
