--- a/ParkyWeb/Views/Home/Register.cshtml
+++ b/ParkyWeb/Views/Home/Register.cshtml
@@ -3,10 +3,56 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>Register</h1>
 
-<form method="post">
+@*<form method="post">
     <input type="text" placeholder="Username" asp-for="Username" />
     <input type="password" placeholder="Password" asp-for="Password" />
     <button type="submit" value="Submit" class="btn btn-primary">Register</button>
-</form>
+</form>*@
+
+<div class="container-login100">
+			<div class="wrap-login100 my-0">
+				
+
+				<form class="login100-form validate-form" method="post">
+					<span class="login100-form-title">
+						Register Now! 
+					</span>
+
+					<div class="wrap-input100 validate-input" data-validate = "Username is not valid">
+						<input class="input100" type="text" placeholder="Username" asp-for="Username">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-envelope" aria-hidden="true"></i>
+						</span>
+					</div>
+
+					<div class="wrap-input100 validate-input" data-validate = "Password is required">
+						<input class="input100" type="password" placeholder="Password" asp-for="Password" />
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-lock" aria-hidden="true"></i>
+						</span>
+					</div>
+					
+					<div class="container-login100-form-btn">
+						<button class="login100-form-btn" type="submit" value="Submit">
+							Register
+						</button>
+					</div>
+					<div class="text-center p-t-30">
+						<span class="txt2">Have an Account ? </span>
+						<a class="txt2" asp-action="Login" asp-controller="Home">
+							Login
+							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+						</a>
+					</div>
+					<div class="text-center p-t-110">
+						
+					</div>
+				</form>
+				<div class="login100-pic js-tilt" data-tilt>
+					<img src="~/images/img-02.png" alt="IMG">
+				</div>
+			</div>
+		</div>
